# MT5-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start-remote.ps1
docs/: specification.md
mt5_mcp/: __init__.py  config.py  connection.py  http_server.py  safety.py  server.py
mt5_mcp/tools/: __init__.py  account.py  analysis.py  fibonacci.py  history.py  indicators.py  market.py  trade.py
mt5_mcp/utils/: format.py  mapping.py
scripts/: debug_check.py  dryrun_xauusd.py  find_tradeable.py  full_test.py  roundtrip_live.py  smoke_test.py  test_http.ps1  trade_dryrun_test.py
